Add DictionaryArray method to create from arrays; use that to reproduce ARROW-7639