r/tests/testthat/test-Array.R
@@ -524,3 +524,13 @@ test_that("[ accepts Expressions", {
   b <- Array$create(1:10)
   expect_vector(a[b > 4], vec[5:10])
 })
+
+test_that("Dictionary array: create from arrays, not factor", {
+  a <- DictionaryArray$create(c(2L, 1L, 1L, 2L, 0L), c(4.5, 3.2, 1.1))
+  expect_equal(a$type, dictionary(int32(), float64()))
+})
+
+test_that("Dictionary array: translate to R when dict isn't string", {
+  a <- DictionaryArray$create(c(2L, 1L, 1L, 2L, 0L), c(4.5, 3.2, 1.1))
+  as.vector(a)
+})
